PISM-707 | Correcting alignment of search results in color family facet.
Colors were centering vertically when there were few search results. They should always be top-aligned.

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -10,6 +10,7 @@
     @include respond-above(sm) { min-height: 66vh; }
 
     &__swatches {
+      align-self: flex-start;
       width: 100%;
 
       &--cover {
